css/about.css
.about__title {
    margin-bottom: 16px;
    text-align: center;
}

.about__text {
  font-weight: 500;
  font-size: 20px;
  line-height: 28px;
  letter-spacing: 0px;
  color: var(--color-grey);
  margin-bottom: 40px;
}

.about-card {
    display: flex;
    gap: 32px;
    margin-bottom: 40px;
    counter-reset: card-counter;
}

.about-card__item {
    background-color: #1A1925;
    background-repeat: no-repeat;
    background-position: 32px 32px;
    padding: 62px 32px 32px 32px;
    position: relative;
}

.about-card__title {
  font-family: var(--font-family-secondary);
  font-weight: 400;
  font-size: 24px;
  line-height: 1.3;
  letter-spacing: 0px;
  margin-bottom: 24px;
}

.about-card__title::before {
  counter-increment: card-counter;
  content: "0" counter(card-counter) "";
  position: absolute;
  font-size: 70px;
  top: 36px;
  color: var(--color-marina-800);
}

.about-card__text {
font-weight: 400;
font-size: 18px;
line-height: 1.5;
letter-spacing: 0px;
color: var(--color-grey);
}

